--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.github.sudoitir</groupId>
   <artifactId>dddcqrstoolkit</artifactId>
-  <version>1.2.3</version>
+  <version>1.2.4</version>
   <name>DDD-CQRS Toolkit</name>
   <description>DDD-CQRS Toolkit</description>
   <url>http://github.com/sudoitir/ddd-cqrs-toolkit</url>
@@ -41,20 +41,21 @@
     <maven.compiler.target>17</maven.compiler.target>
     <jacoco.version>0.8.12</jacoco.version>
     <vavr.version>0.10.4</vavr.version>
-    <micrometer.version>1.12.3</micrometer.version>
+    <micrometer.version>1.13.1</micrometer.version>
+    <hibernate.validator.version>8.0.1.Final</hibernate.validator.version>
     <spring.boot.version>3.3.0</spring.boot.version>
     <spring.expression.version>6.1.9</spring.expression.version>
     <spring.data.commons.version>3.3.1</spring.data.commons.version>
     <spring.jdbc.version>6.1.8</spring.jdbc.version>
-    <hibernate.validator.version>8.0.1.Final</hibernate.validator.version>
+    <spring.webmvc.version>6.1.8</spring.webmvc.version>
     <spring.web.version>6.1.8</spring.web.version>
     <spring.aop.version>6.1.8</spring.aop.version>
+    <spring.test.version>6.1.8</spring.test.version>
     <aspectj.version>1.9.22</aspectj.version>
     <assertj.version>3.25.3</assertj.version>
     <junit.jupiter.version>5.10.2</junit.jupiter.version>
     <mockito.version>5.11.0</mockito.version>
     <jakarta.el.version>4.0.2</jakarta.el.version>
-    <spring.test.version>6.1.8</spring.test.version>
     <jackson.databind.version>2.17.1</jackson.databind.version>
     <jakarta.servlet.api.version>6.1.0</jakarta.servlet.api.version>
     <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
@@ -108,12 +109,6 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>io.micrometer</groupId>
-      <artifactId>micrometer-registry-atlas</artifactId>
-      <version>${micrometer.version}</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-aop</artifactId>
       <version>${spring.aop.version}</version>
@@ -124,6 +119,35 @@
       <artifactId>aspectjweaver</artifactId>
       <version>${aspectj.version}</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-autoconfigure</artifactId>
+      <version>${spring.boot.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson.databind.version}</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>${spring.webmvc.version}</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-core</artifactId>
+      <version>${micrometer.version}</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
+      <version>${jakarta.servlet.api.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -172,23 +196,6 @@
       <artifactId>spring-test</artifactId>
       <version>${spring.test.version}</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-autoconfigure</artifactId>
-      <version>${spring.boot.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>${jackson.databind.version}</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>jakarta.servlet</groupId>
-      <artifactId>jakarta.servlet-api</artifactId>
-      <version>${jakarta.servlet.api.version}</version>
-      <scope>provided</scope>
     </dependency>
   </dependencies>
 
